--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "learn p5.js",
   "main": "index.js",
   "scripts": {
-    "dev": "parcel src/index.html --open",
-    "build": "parcel build src/index.html --public-url ./",
+    "start": "npm-run-all --parallel watch:*",
+    "watch:start": "parcel serve src/index.html",
+    "watch:css": "tailwindcss -i src/style.css -o src/assets/tailwind/tailwind.css -w",
+    "build": "npm-run-all --parallel 'prod:*'",
+    "prod:build": "parcel build src/index.html --no-source-maps --no-cache",
     "clean": "rm -rf dist",
     "publish": "./scripts/publish"
   },
@@ -13,10 +16,23 @@
   "license": "MIT",
   "devDependencies": {
     "@types/p5": "^1.3.0",
+    "autoprefixer": "latest",
+    "cssnano": "^5.0.7",
+    "npm-run-all": "^4.1.5",
+    "parcel": "next",
     "parcel-bundler": "^1.12.5",
+    "parcel-plugin-static-files-copy": "^2.6.0",
+    "postcss": "^8.3.5",
+    "postcss-import": "^14.0.2",
+    "tailwindcss": "latest",
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "global": "^4.4.0",
     "p5": "^1.4.0"
+  },
+  "staticFiles": {
+    "staticPath": "static",
+    "watcherGlob": "**"
   }
 }
