--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "p5jsdev",
   "version": "1.0.1",
   "description": "learn p5.js",
-  "main": "index.js",
   "scripts": {
     "start": "npm-run-all --parallel watch:*",
     "watch:start": "parcel serve src/index.html",
@@ -16,23 +15,20 @@
   "license": "MIT",
   "devDependencies": {
     "@types/p5": "^1.3.0",
-    "autoprefixer": "latest",
+    "autoprefixer": "^10.3.1",
     "cssnano": "^5.0.7",
     "npm-run-all": "^4.1.5",
-    "parcel": "next",
-    "parcel-bundler": "^1.12.5",
-    "parcel-plugin-static-files-copy": "^2.6.0",
-    "postcss": "^8.3.5",
+    "parcel": "^2.0.0-rc.0",
+    "parcel-reporter-static-files-copy": "^1.3.0",
+    "postcss": "^8.3.6",
     "postcss-import": "^14.0.2",
-    "tailwindcss": "latest",
-    "typescript": "^4.3.5"
+    "tailwindcss": "^2.2.7"
   },
   "dependencies": {
-    "global": "^4.4.0",
     "p5": "^1.4.0"
   },
   "staticFiles": {
     "staticPath": "static",
-    "watcherGlob": "**"
+    "staticOutPath": "static"
   }
 }
