--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "start": "npm-run-all --parallel watch:*",
     "watch:start": "parcel serve src/index.html",
     "watch:css": "tailwindcss -i src/style.css -o src/assets/tailwind/tailwind.css -w",
-    "build": "npm-run-all --parallel 'prod:*'",
-    "prod:build": "parcel build src/index.html --no-source-maps --no-cache",
+    "build": "parcel build src/index.html --no-source-maps --no-cache --public-url ./",
     "clean": "rm -rf dist",
     "publish": "./scripts/publish"
   },
