--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch:css": "tailwindcss -i src/style.css -o src/assets/tailwind/tailwind.css -w",
     "build": "parcel build src/index.html --no-source-maps --no-cache --public-url ./",
     "clean": "rm -rf dist",
-    "publish": "./scripts/publish"
+    "deploy": "gh-pages -d dist"
   },
   "author": "",
   "license": "MIT",
@@ -16,6 +16,7 @@
     "@types/p5": "^1.3.0",
     "autoprefixer": "^10.3.1",
     "cssnano": "^5.0.7",
+    "gh-pages": "^3.2.3",
     "npm-run-all": "^4.1.5",
     "parcel": "^2.0.0-rc.0",
     "parcel-reporter-static-files-copy": "^1.3.0",
